[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/load_world3.gd" type="Script" id=1]
[ext_resource path="res://resources/WorldEnvironment3.tres" type="Environment" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/doors/Pipe.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/Sensor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/doors/PipeClosed.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/objects/Lantern.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Narrator.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Gridmaps/GridMap3.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Room7Manager.gd" type="Script" id=10]

[node name="world" type="Spatial"]
pause_mode = 1
script = ExtResource( 1 )
EnvironmentUsed = ExtResource( 2 )

[node name="RoomItems" type="Spatial" parent="."]

[node name="Player" parent="RoomItems" instance=ExtResource( 3 )]
transform = Transform( 4.71473e-06, 0, -0.5, 0, 0.5, 0, 0.5, 0, 4.71473e-06, -6.4, 0.7, 0 )

[node name="PipeClosed" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( -3.14315e-06, 0, 1, 0, 1, 0, -1, 0, -3.14315e-06, -8.1, 0.8, -4.76837e-07 )

[node name="Pipe" parent="RoomItems" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -6.28631e-06, 0, 1, 0, 6.28631e-06, 0, -1, 0, 0.8, 74.1 )

[node name="Lantern" parent="RoomItems" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 1.1 )

[node name="Lantern2" parent="RoomItems" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -1.7 )

[node name="Narrator" parent="." instance=ExtResource( 8 )]

[node name="Objs" type="Spatial" parent="."]

[node name="GridMap3" parent="." instance=ExtResource( 9 )]
data = {
"cells": PoolIntArray( 1, 0, 0, 65531, 0, 0, 65537, 0, 0, 131067, 0, 0, 131072, 0, 1, 196604, 0, 1, 196605, 0, 1, 196606, 0, 1, 196607, 0, 1, -65536, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, 1, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65537, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131072, 1, 1, 196607, 1, 1, -65536, 1, 1, -1, 1, 1, 1, 2, 0, 65534, 2, 0, 65537, 2, 0, 131070, 2, 0, 131072, 2, 1, 196607, 2, 1, -65536, 2, 1, -1, 2, 1, 1, 3, 0, 65534, 3, 0, 65537, 3, 0, 131070, 3, 0, 131072, 3, 1, 196607, 3, 1, -65536, 3, 1, -1, 3, 1, 1, 4, 0, 65534, 4, 0, 65537, 4, 0, 131070, 4, 0, 131072, 4, 1, 196607, 4, 1, -65536, 4, 1, -1, 4, 1, 1, 5, 0, 65534, 5, 0, 65537, 5, 0, 131070, 5, 0, 131072, 5, 1, 196607, 5, 1, -65536, 5, 1, -1, 5, 1, 1, 6, 0, 65534, 6, 0, 65537, 6, 0, 131070, 6, 0, 131072, 6, 1, 196607, 6, 1, -65536, 6, 1, -1, 6, 1, 1, 7, 0, 65534, 7, 0, 65537, 7, 0, 131070, 7, 0, 131072, 7, 1, 196607, 7, 1, -65536, 7, 1, -1, 7, 1, 1, 8, 0, 65534, 8, 0, 65537, 8, 0, 131070, 8, 0, 131072, 8, 1, 196607, 8, 1, -65536, 8, 1, -1, 8, 1, 1, 9, 0, 65534, 9, 0, 65537, 9, 0, 131070, 9, 0, 131072, 9, 1, 196607, 9, 1, -65536, 9, 1, -1, 9, 1, 1, 10, 0, 65534, 10, 0, 65537, 10, 0, 131070, 10, 0, 131072, 10, 1, 196607, 10, 1, -65536, 10, 1, -1, 10, 1, 1, 11, 0, 65534, 11, 0, 65537, 11, 0, 131070, 11, 0, 131072, 11, 1, 196607, 11, 1, -65536, 11, 1, -1, 11, 1, 1, 12, 0, 65534, 12, 0, 65537, 12, 0, 131070, 12, 0, 131072, 12, 1, 196607, 12, 1, -65536, 12, 1, -1, 12, 1, 1, 13, 0, 65534, 13, 0, 65537, 13, 0, 131070, 13, 0, 131072, 13, 1, 196607, 13, 1, -65536, 13, 1, -1, 13, 1, 1, 14, 0, 65534, 14, 0, 65537, 14, 0, 131070, 14, 0, 131072, 14, 1, 196607, 14, 1, -65536, 14, 1, -1, 14, 1, 1, 15, 0, 65534, 15, 0, 65537, 15, 0, 131070, 15, 0, 131072, 15, 1, 196607, 15, 1, -65536, 15, 1, -1, 15, 1, 1, 16, 0, 65534, 16, 0, 65537, 16, 0, 131070, 16, 0, 131072, 16, 1, 196607, 16, 1, -65536, 16, 1, -1, 16, 1, 1, 17, 0, 65534, 17, 0, 65537, 17, 0, 131070, 17, 0, 131072, 17, 1, 196607, 17, 1, -65536, 17, 1, -1, 17, 1, 1, 18, 0, 65534, 18, 0, 65537, 18, 0, 131070, 18, 0, 131072, 18, 1, 196607, 18, 1, -65536, 18, 1, -1, 18, 1, 1, 19, 0, 65534, 19, 0, 65537, 19, 0, 131070, 19, 0, 131072, 19, 1, 196607, 19, 1, -65536, 19, 1, -1, 19, 1, 1, 20, 0, 65534, 20, 0, 65537, 20, 0, 131070, 20, 0, 131072, 20, 1, 196607, 20, 1, -65536, 20, 1, -1, 20, 1, 1, 21, 0, 65534, 21, 0, 65537, 21, 0, 131070, 21, 0, 131072, 21, 1, 196607, 21, 1, -65536, 21, 1, -1, 21, 1, 1, 22, 0, 65534, 22, 0, 65537, 22, 0, 131070, 22, 0, 131072, 22, 1, 196607, 22, 1, -65536, 22, 1, -1, 22, 1, 1, 23, 0, 65534, 23, 0, 65537, 23, 0, 131070, 23, 0, 131072, 23, 1, 196607, 23, 1, -65536, 23, 1, -1, 23, 1, 1, 24, 0, 65534, 24, 0, 65537, 24, 0, 131070, 24, 0, 131072, 24, 1, 196607, 24, 1, -65536, 24, 1, -1, 24, 1, 1, 25, 0, 65534, 25, 0, 65537, 25, 0, 131070, 25, 0, 131072, 25, 1, 196607, 25, 1, -65536, 25, 1, -1, 25, 1, 1, 26, 0, 65534, 26, 0, 65537, 26, 0, 131070, 26, 0, 131072, 26, 1, 196607, 26, 1, -65536, 26, 1, -1, 26, 1, 1, 27, 0, 65534, 27, 0, 65537, 27, 0, 131070, 27, 0, 131072, 27, 1, 196607, 27, 1, -65536, 27, 1, -1, 27, 1, 1, 28, 0, 65534, 28, 0, 65537, 28, 0, 131070, 28, 0, 131072, 28, 1, 196607, 28, 1, -65536, 28, 1, -1, 28, 1, 1, 29, 0, 65534, 29, 0, 65537, 29, 0, 131070, 29, 0, 131072, 29, 1, 196607, 29, 1, -65536, 29, 1, -1, 29, 1, 1, 30, 0, 65534, 30, 0, 65537, 30, 0, 131070, 30, 0, 131072, 30, 1, 196607, 30, 1, -65536, 30, 1, -1, 30, 1, 1, 31, 0, 65534, 31, 0, 65537, 31, 0, 131070, 31, 0, 131072, 31, 1, 196607, 31, 1, -65536, 31, 1, -1, 31, 1, 1, 32, 0, 65534, 32, 0, 65537, 32, 0, 131070, 32, 0, 131072, 32, 1, 196607, 32, 1, -65536, 32, 1, -1, 32, 1, 1, 33, 0, 65534, 33, 0, 65537, 33, 0, 131070, 33, 0, 131072, 33, 1, 196607, 33, 1, -65536, 33, 1, -1, 33, 1, 1, 34, 0, 65534, 34, 0, 65537, 34, 0, 131070, 34, 0, 131072, 34, 1, 196607, 34, 1, -65536, 34, 1, -1, 34, 1, 1, 35, 0, 65534, 35, 0, 65537, 35, 0, 131070, 35, 0, 131072, 35, 1, 196607, 35, 1, -65536, 35, 1, -1, 35, 1, 1, 36, 0, 65534, 36, 0, 65537, 36, 0, 131070, 36, 0, 131072, 36, 1, 196607, 36, 1, -65536, 36, 1, -1, 36, 1, 0, 37, 0, 65535, 37, 0, 65536, 37, 0, 131071, 37, 0, 0, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 65536, 65534, 0, 131068, 65534, 0, 131069, 65534, 0, 131070, 65534, 0, 131071, 65534, 0, 1, 65535, 0, 65531, 65535, 0, 65537, 65535, 0, 131067, 65535, 0, 131072, 65535, 1, 196604, 65535, 1, 196605, 65535, 1, 196606, 65535, 1, 196607, 65535, 1, -65536, 65535, 1, -4, 65535, 1, -3, 65535, 1, -2, 65535, 1, -1, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 2, 0 )
}

[node name="Room7Manager" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="Sensor" parent="Room7Manager" instance=ExtResource( 5 )]
transform = Transform( 2.2, 0, 0, 0, 1.425, 0, 0, 0, 1, 0, 1.9, 26.7 )

[node name="Sensor2" parent="Room7Manager" instance=ExtResource( 5 )]
transform = Transform( 2.2, 0, 0, 0, 1.425, 0, 0, 0, 1, 0, 1.9, 16.7 )

[node name="Sensor3" parent="Room7Manager" instance=ExtResource( 5 )]
transform = Transform( 2.2, 0, 0, 0, 1.425, 0, 0, 0, 1, 0, 1.9, 42.7 )
OneShot = false

[connection signal="PlayerDetected" from="Room7Manager/Sensor" to="Room7Manager" method="_on_Sensor_PlayerDetected"]
[connection signal="PlayerDetected" from="Room7Manager/Sensor2" to="Room7Manager" method="_on_Sensor2_PlayerDetected"]
[connection signal="PlayerDetected" from="Room7Manager/Sensor3" to="Room7Manager" method="_on_Sensor3_PlayerDetected"]
